# zark

./: .gitignore  README.md  autogen.sh  config.h.in  configure.ac  reconf.sh  valgrind.sh
msvc/vc9/: config.h  zark.sln  zark.vcproj
msvc/vc9/lib/: ftgl.exp  ftgl.lib  ftgl_D.lib
src/: Makefile.am  camera.c  camera.h  cmdstring_lex.c.inc  cmdstring_lex.l  cmdstring_yacc.c  cmdstring_yacc.y  cmdsymbols.def  command.c  command.h  common.h  console.c  console.h  image.c  image.h  impulse.c  impulse.h  input.c  input.h  keybindings_lex.c.inc  keybindings_lex.l  keybindings_yacc.c  keybindings_yacc.y  keys.def  main.c  main.h  material.c  material.h  mesh.c  mesh.h  mesh_loader_obj.c  mesh_loader_obj.c.old  mesh_loader_ply.c  os.c  os.h  os_win32.c  renderer.c  renderer.h  scene.c  scene.h  (+16 more)
win32/: zark.sln  zark.vcproj
win32/lib/: ftgl_static.lib
