
DEFS = -DASSET_DIR='"$(ASSET_DIR)"' @DEFS@

bin_PROGRAMS = zark

zark_SOURCES = variables.def\
			   keys.def\
			   common.h\
			   renderer.h\
			   renderer.c\
			   camera.h\
			   camera.c\
			   main.h\
			   main.c\
			   zmath.h\
			   zmath.c\
			   image.h\
			   image.c\
			   material.h\
			   material.c\
			   shader.h\
			   shader.c\
			   mesh.h\
			   mesh.c\
			   mesh_loader_obj.c\
			   mesh_loader_ply.c\
			   os.h\
			   os.c\
			   util.h\
			   util.c\
			   input.h\
			   input.c\
			   variables.h\
			   variables.c\
			   textrender.h\
			   textrender.c\
			   console.h\
			   console.c\
			   scene.h\
			   scene.c\
			   zlua.h\
			   zlua.c\
			   zlua_console.c\
			   impulse.h\
			   impulse.c


